# UAV_UGV_monitoring

./: .gitignore  README.md  commads-to-run
install/: local_setup.sh  setup.sh
install/ch_manager/lib/ch_manager/: ch_manager_node
install/ch_manager/share/ch_manager/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ch_manager/share/ch_manager/cmake/: ch_managerConfig.cmake
install/coverage_planner/lib/coverage_planner/: coverage_planner_node
install/coverage_planner/share/ament_index/resource_index/package_run_dependencies/: coverage_planner
install/coverage_planner/share/coverage_planner/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/coverage_planner/share/coverage_planner/cmake/: coverage_plannerConfig.cmake
install/fault_injector/share/fault_injector/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/network_monitor/lib/network_monitor/: network_monitor_node
install/network_monitor/share/network_monitor/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/network_monitor/share/network_monitor/cmake/: network_monitorConfig.cmake
install/sink_gateway/lib/sink_gateway/: sink_gateway_node
install/sink_gateway/share/ament_index/resource_index/parent_prefix_path/: sink_gateway
install/sink_gateway/share/sink_gateway/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/system_bringup/share/system_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uav_fleet/share/ament_index/resource_index/package_run_dependencies/: uav_fleet
install/uav_fleet/share/ament_index/resource_index/parent_prefix_path/: uav_fleet
install/uav_fleet/share/uav_fleet/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uav_msgs/include/uav_msgs/uav_msgs/action/: dock_and_charge.h  dock_and_charge.hpp
install/uav_msgs/include/uav_msgs/uav_msgs/action/detail/: dock_and_charge__functions.h  dock_and_charge__rosidl_typesupport_fastrtps_cpp.hpp  dock_and_charge__rosidl_typesupport_introspection_cpp.hpp  dock_and_charge__struct.h  dock_and_charge__struct.hpp  dock_and_charge__type_support.cpp  dock_and_charge__type_support.h  dock_and_charge__type_support.hpp
install/uav_msgs/include/uav_msgs/uav_msgs/msg/: charge_decision.h  charge_decision.hpp  charge_request.hpp  cluster_info.h  heartbeat.h  heartbeat.hpp  traffic_message.hpp  uav_deployment.hpp  uav_status.h  weather_status.h
install/uav_msgs/include/uav_msgs/uav_msgs/msg/detail/: charge_decision__builder.hpp  charge_decision__functions.c  charge_decision__functions.h  charge_decision__rosidl_typesupport_fastrtps_c.h  charge_decision__rosidl_typesupport_introspection_c.h  charge_decision__rosidl_typesupport_introspection_cpp.hpp  charge_decision__struct.h  charge_decision__type_support.cpp  charge_decision__type_support.hpp  charge_request__builder.hpp  charge_request__functions.c  charge_request__functions.h  charge_request__rosidl_typesupport_introspection_c.h  (+50 more)
install/uav_msgs/include/uav_msgs/uav_msgs/srv/: send_debug_text.h  send_debug_text.hpp
install/uav_msgs/share/ament_index/resource_index/package_run_dependencies/: uav_msgs
install/uav_msgs/share/ament_index/resource_index/rosidl_interfaces/: uav_msgs
install/uav_msgs/share/uav_msgs/: package.sh
install/uav_msgs/share/uav_msgs/cmake/: export_uav_msgs__rosidl_generator_cExport.cmake  export_uav_msgs__rosidl_generator_pyExport.cmake  export_uav_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_uav_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  uav_msgs__rosidl_typesupport_cExport.cmake  uav_msgs__rosidl_typesupport_cppExport.cmake
install/uav_msgs/share/uav_msgs/msg/: ChargeDecision.msg  ChargeRequest.idl  FailureEvent.idl  Heartbeat.idl  TrafficMessage.idl  TrafficMessage.msg  UavDeployment.idl  UavDeployment.msg  UavStatus.idl  WeatherStatus.idl
install/uav_msgs/share/uav_msgs/srv/: SendDebugText.idl  SendDebugText_Request.msg
install/ugv_charger/lib/ugv_charger/: ugv_charger_node
install/ugv_charger/share/ugv_charger/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/user_devices_sim/lib/user_devices_sim/: user_device_node
install/user_devices_sim/share/user_devices_sim/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/user_devices_sim/share/user_devices_sim/cmake/: user_devices_simConfig.cmake
install/weather_server/lib/weather_server/: weather_node
install/weather_server/share/weather_server/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/weather_server/share/weather_server/cmake/: weather_serverConfig.cmake
log/: latest_build
src/ch_manager/: CMakeLists.txt
src/ch_manager/src/: ch_manager_node.cpp
src/coverage_planner/: CMakeLists.txt  package.xml
src/coverage_planner/src/: coverage_planner_node.cpp
src/fault_injector/: CMakeLists.txt  package.xml
src/network_monitor/: CMakeLists.txt
src/network_monitor/src/: network_monitor_node.cpp
src/planner_viz/: package.xml  setup.cfg  setup.py
src/planner_viz/planner_viz/: planner_viz_node.py
src/sink_gateway/: CMakeLists.txt
src/sink_gateway/src/: sink_gateway_node.cpp
src/system_bringup/: CMakeLists.txt
src/uav_fleet/: CMakeLists.txt  package.xml
src/uav_fleet/src/: uav_node.cpp
src/uav_msgs/: CMakeLists.txt  package.xml
src/uav_msgs/action/: DockAndCharge.action
src/uav_msgs/msg/: ClusterInfo.msg  Heartbeat.msg  TrafficMessage.msg
src/uav_msgs/srv/: SendDebugText.srv
src/ugv_charger/: CMakeLists.txt
src/ugv_charger/src/: ugv_charger_node.cpp
src/user_devices_sim/: CMakeLists.txt  package.xml
src/user_devices_sim/src/: user_device_node.cpp
src/weather_server/: CMakeLists.txt
src/weather_server/src/: weather_node.cpp
(+30 files in other folders)
