<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_fleet</name>
  <version>0.0.0</version>
  <description>UAV node logic (status, heartbeat, local traffic generator) for the disaster network simulator.</description>
  <maintainer email="liyu.jin03@gmail.com">vboxuser</maintainer>
  <license>TODO: License declaration</license>
  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- We use rclcpp for C++ nodes -->
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- We use our shared interfaces -->
  <build_depend>uav_msgs</build_depend>
  <exec_depend>uav_msgs</exec_depend>

  <!-- Because UavStatus uses geometry_msgs/Pose -->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
