<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_msgs</name>
  <version>0.0.0</version>
  <description>TShared message, service, and action definitions for the UAV-UGV disaster network simulator.</description>
  <maintainer email="liyu.jin03@gmail.com">vboxuser</maintainer>
  <license>TODO: License declaration</license>
  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For generating interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Needed for actions -->
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
